--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=4000
-MONG_URL=mongodb+srv://plrizek:Pete2024@jobs.qziovje.mongodb.net/?retryWrites=true&w=majority&appName=Jobs
+MONG_URI=mongodb+srv://plrizek:Pete2024@jobs.qziovje.mongodb.net/?retryWrites=true&w=majority&appName=Jobs
 
 
 
