--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ PORT=4000
 MONG_URI="mongodb+srv://plrizek:bjdeh26T1Y8m9mEB@cluster0.idswnkh.mongodb.net/?appName=Cluster0"
 
 
-
+REACT_APP_GOOGLE_CLIENT_ID=786979441564-i5g4brsr4ba2u7c6kvsp2244ijiqd52l.apps.googleusercontent.com
 
 # # DATABASE_URI ="mongodb+srv://plrizek:4PkpjLBJzR28DgRT@authentication.zs2mpjw.mongodb.net/?retryWrites=true&w=majority&appName=authentication"
 
