--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
+    "google-auth-library": "^10.5.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.4",
     "nodemon": "^3.1.0"
   },
